# indigo

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  appveyor.yml  game.c  game.h  loader_commands.ods  main.c  math.c  math.h  render.c  render.h
CMakeModules/: FindSDL2.cmake  MacOSXBundleInfo.plist.in
Win/: VersionResource.rc
Xcode/English.lproj/: Credits.rtf
Xcode/de.lproj/: Credits.rtf
generator/: main.c  maze.c  maze.h
res/levels/: 1  2  3  4  5  6  7
